# MethReport

./: .gitignore  README.md  pyproject.toml
methreport/: __init__.py  analysis.py  bed_reader.py  cli.py  controls.py  disorders.py  export.py  modbam_pileup.py  reader.py  regions.py  report.py
methreport/data/: README.md
scripts/: convert_controls.py
tests/: test_controls.py  test_regions.py  test_zscore.py
