[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "methreport"
version = "0.1.0"
description = "Clinical-grade DNA methylation imprinting disorder report from modbam files"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "MethReport Contributors" }]
keywords = ["nanopore", "methylation", "imprinting", "clinical", "genomics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pysam>=0.22",
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "plotly>=5.20",
    "jinja2>=3.1",
    "typer>=0.12",
    "rich>=13.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "ruff", "mypy"]

[project.scripts]
methreport = "methreport.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["methreport"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
